@startuml

title __ENTITIES's Class Diagram__\n

  namespace  {
    namespace ain.java {
      namespace Entities {
        class main.java.Entities.AccessibilityOptions {
            - request : String
            - status : String
            - time_sent : LocalDateTime
            + AccessibilityOptions()
            + getRequest()
            + getStatus()
            + getTime_sent()
            + setStatus()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Entities {
        class main.java.Entities.Attendee {
            - eventsRegistered : ArrayList<UUID>
            - friendList : ArrayList<String>
            - messages : ArrayList<Message>
            - password : String
            - role : String
            - username : String
            + Attendee()
            + addFriend()
            + cancelEnrollment()
            + getEventsRegistered()
            + getFriendList()
            + getNumOfFriends()
            + getPassword()
            + getRole()
            + getUsername()
            + registerForEvent()
            + removeFriend()
            + setPassword()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Entities {
        class main.java.Entities.Event {
            # datetime : LocalDateTime
            # duration : int
            # eventCapacity : int
            # location : String
            # title : String
            # usernames : ArrayList<String>
            # uuid : UUID
            - type : String
            + Event()
            + addAttendees()
            + addAttendees()
            + containSpeaker()
            + equals()
            + getAttendees()
            + getCapacity()
            + getDatetime()
            + getDuration()
            + getLocation()
            + getTitle()
            + getType()
            + getUsernames()
            + getUuid()
            + removeAttendees()
            + removeAttendees()
            + removeAttendeesUntilCap()
            + setCapacity()
            + setDatetime()
            + setDuration()
            + setLocation()
            + setTitle()
            + toString()
            # Event()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Entities {
        class main.java.Entities.Message {
            - content : String
            - receiver : String
            - sender : String
            - time_sent : LocalDateTime
            + Message()
            + equals()
            + getContent()
            + getSender()
            + getTime_sent()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Entities {
        class main.java.Entities.PanelDiscussion {
            - speakers : ArrayList<String>
            + PanelDiscussion()
            + addSpeaker()
            + addSpeakers()
            + containSpeaker()
            + getSpeakers()
            + removeSpeakers()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Entities {
        class main.java.Entities.Speaker {
            - talks : ArrayList<UUID>
            + Speaker()
            + addTalk()
            + getTalks()
            + removeTalk()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Entities {
        class main.java.Entities.Talk {
            - speaker : String
            + Talk()
            + changeSpeaker()
            + containSpeaker()
            + getSpeaker()
            + setSpeaker()
        }
      }
    }
  }
  

  main.java.Entities.AccessibilityOptions -up-|> main.java.Entities.Message
  main.java.Entities.Attendee .up.|> java.io.Serializable
  main.java.Entities.Event .up.|> java.io.Serializable
  main.java.Entities.Message .up.|> java.io.Serializable
  main.java.Entities.PanelDiscussion -up-|> main.java.Entities.Event
  main.java.Entities.Speaker -up-|> main.java.Entities.Attendee
  main.java.Entities.Talk -up-|> main.java.Entities.Event


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
